[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
indexset = { version = "0.9.0", features = ["serde"] }
rustyline = "15.0.0"

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde = { version = "1.0.217", features = ["derive"] }

[features]
small_pages = []
